--- a/kie-jboss-modules/pom.xml
+++ b/kie-jboss-modules/pom.xml
@@ -2,16 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <artifactId>kie-docker-integration</artifactId>
-    <groupId>org.kie.docker</groupId>
-    <version>1.0.0-SNAPSHOT</version>
-  </parent>
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.kie.docker</groupId>
+    <artifactId>kie-docker-ci-images</artifactId>
+    <version>6.4.0-SNAPSHOT</version>
+  </parent>
 
   <artifactId>kie-jboss-modules</artifactId>
   <packaging>pom</packaging>
-  <name>KIE - JBoss modules for Docker images</name>
+  <name>KIE :: JBoss modules for Docker images</name>
 
   <dependencies>
     
