--- a/kie-wb/src/main/docker/tomcat/Dockerfile
+++ b/kie-wb/src/main/docker/tomcat/Dockerfile
@@ -13,8 +13,8 @@ ENV KIE_CONNECTION_USER sa
 # Empty password by default
 # ENV KIE_CONNECTION_PASSWORD 
 ENV KIE_CONNECTION_DATABASE kie
-LABEL org.kie.kie-wb.artifact=${kie.docker.kie-wb.tomcat7.repositoryPath}
-LABEL org.jbpm.jbpm-dashboard.artifact=${kie.docker.jbpm-dashbuilder.tomcat7.repositoryPath}
+LABEL org.kie.kie-wb.artifact=org.kie:kie-wb-distribution-wars:war:tomcat7
+LABEL org.jbpm.jbpm-dashboard.artifact=org.jbpm.dashboard:jbpm-dashboard-distributions:war:tomcat7
 
 ####### KIE-WB & DASHBOARD BUILDER & SITE WAR ############
 ADD maven/kie-wb.war $CATALINA_HOME/webapps/kie-wb.war
