--- a/uf-dashbuilder/pom.xml
+++ b/uf-dashbuilder/pom.xml
@@ -2,23 +2,42 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <artifactId>kie-docker-integration</artifactId>
-    <groupId>org.kie.docker</groupId>
-    <version>1.0.0-SNAPSHOT</version>
-  </parent>
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.kie.docker</groupId>
+    <artifactId>kie-docker-ci-images</artifactId>
+    <version>6.4.0-SNAPSHOT</version>
+  </parent>
 
   <artifactId>uf-dashbuilder</artifactId>
-  <packaging>pom</packaging>
-  <name>UF Dashbuilder - Docker integration</name>
-  
-  <modules>
-    <module>uf-dashbuilder-base</module>
-    <module>uf-dashbuilder-master</module>
-  </modules>
+  <packaging>jar</packaging>
+  <name>UF Dashbuilder :: Docker integration</name>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.dashbuilder</groupId>
+      <artifactId>dashbuilder-distros</artifactId>
+      <version>${docker.dashbuilder.artifacts.version}</version>
+      <type>war</type>
+      <classifier>wildfly8</classifier>
+    </dependency>
+
+    <dependency>
+      <groupId>org.dashbuilder</groupId>
+      <artifactId>dashbuilder-distros</artifactId>
+      <version>${docker.dashbuilder.artifacts.version}</version>
+      <type>war</type>
+      <classifier>eap6_4</classifier>
+    </dependency>
+
+    <dependency>
+      <groupId>org.dashbuilder</groupId>
+      <artifactId>dashbuilder-distros</artifactId>
+      <version>${docker.dashbuilder.artifacts.version}</version>
+      <type>war</type>
+      <classifier>tomcat7</classifier>
+    </dependency>
 
     <!-- Required by docker-maven-plugin for using the <wait> tag in run container configuration. -->
     <dependency>
@@ -103,4 +122,193 @@
 
   </dependencies>
 
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/docker</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+    <plugins>
+      <!-- Generate site report for dependencies for including it into the generated docker image. -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <configuration>
+          <finalName>uf-dashbuilder</finalName>
+          <jarOutputDirectory>${project.build.directory}</jarOutputDirectory>
+          <reportPlugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-project-info-reports-plugin</artifactId>
+              <reports>
+                <report>dependencies</report>
+              </reports>
+            </plugin>
+          </reportPlugins>
+        </configuration>
+        <executions>
+          <execution>
+            <id>generate-report</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.jolokia</groupId>
+        <artifactId>docker-maven-plugin</artifactId>
+        <version>${docker.maven.plugin.version}</version>
+        <configuration>
+          <!-- Global configuration. -->
+          <dockerHost>${docker.daemon.rest.url}</dockerHost>
+          <registry>${docker.registry}</registry>
+          <!-- Although no authentication on registry, set empty values. If not, plugin push goal fails. -->
+          <authConfig>
+            <username/>
+            <password/>
+          </authConfig>
+          <useColor>true</useColor>
+          <logDate>default</logDate>
+          <verbose>true</verbose>
+
+          <images>
+
+            <!-- UF Dashbuilder latest SNAPSHOT & Wildfly 8.1.0.Final. -->
+            <image>
+              <name>${docker.kie.repository}/uf-dashbuilder-wildfly8:${docker.build.dashbuilder.tag}</name>
+              <alias>uf-dashbuilder-wildfly8-${docker.build.dashbuilder.tag}</alias>
+              <build>
+                <assembly>
+                  <dockerFileDir>${project.build.outputDirectory}/wildfly</dockerFileDir>
+                  <descriptor>${pom.basedir}/src/main/assembly/assembly-dashbuilder-wildfly8.xml
+                  </descriptor>
+                </assembly>
+              </build>
+              <run>
+                <namingStrategy>alias</namingStrategy>
+                <env>
+                  <KIE_CONNECTION_URL>"jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"</KIE_CONNECTION_URL>
+                  <KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>
+                  <KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>
+                  <KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>
+                  <KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>
+                </env>
+                <ports>
+                  <port>dashbuilder.wf8.http.port:8080</port>
+                </ports>
+                <wait>
+                  <log>Deployed "dashbuilder\.war"</log>
+                  <time>${docker.run.timeout}</time>
+                </wait>
+                <log>
+                  <prefix>DEMO</prefix>
+                  <date>ISO8601</date>
+                  <color>blue</color>
+                </log>
+              </run>
+            </image>
+
+            <!-- UF Dashbuilder latest SNAPSHOT & JBoss EAP 6.4. -->
+            <image>
+              <name>${docker.kie.repository}/uf-dashbuilder-eap64:${docker.build.dashbuilder.tag}</name>
+              <alias>uf-dashbuilder-eap64-${docker.build.dashbuilder.tag}</alias>
+              <build>
+                <assembly>
+                  <dockerFileDir>${project.build.outputDirectory}/eap</dockerFileDir>
+                  <descriptor>${pom.basedir}/src/main/assembly/assembly-dashbuilder-eap64.xml
+                  </descriptor>
+                </assembly>
+              </build>
+              <run>
+                <namingStrategy>alias</namingStrategy>
+                <env>
+                  <KIE_CONNECTION_URL>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</KIE_CONNECTION_URL>
+                  <KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>
+                  <KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>
+                  <KIE_CONNECTION_PASSWORD>sa</KIE_CONNECTION_PASSWORD>
+                  <KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>
+                </env>
+                <ports>
+                  <port>dashbuilder.eap64.http.port:8080</port>
+                </ports>
+                <wait>
+                  <log>Deployed "dashbuilder\.war"</log>
+                  <time>${docker.run.timeout}</time>
+                </wait>
+                <log>
+                  <prefix>DEMO</prefix>
+                  <date>ISO8601</date>
+                  <color>blue</color>
+                </log>
+              </run>
+            </image>
+
+            <!-- UF Dashbuilder latest SNAPSHOT & Tomcat7. -->
+            <image>
+              <name>${docker.kie.repository}/uf-dashbuilder-tomcat7:${docker.build.dashbuilder.tag}</name>
+              <alias>uf-dashbuilder-tomcat7-${docker.build.dashbuilder.tag}</alias>
+              <build>
+                <assembly>
+                  <dockerFileDir>${project.build.outputDirectory}/tomcat</dockerFileDir>
+                  <descriptor>${pom.basedir}/src/main/assembly/assembly-dashbuilder-tomcat7.xml
+                  </descriptor>
+                </assembly>
+              </build>
+              <run>
+                <namingStrategy>alias</namingStrategy>
+                <env>
+                  <KIE_CONNECTION_URL>jdbc:h2:file:~/jbpm</KIE_CONNECTION_URL>
+                  <KIE_CONNECTION_DRIVER>h2</KIE_CONNECTION_DRIVER>
+                  <KIE_CONNECTION_USER>sa</KIE_CONNECTION_USER>
+                  <!-- Empty password by default. -->
+                  <!--<KIE_CONNECTION_PASSWORD></KIE_CONNECTION_PASSWORD>-->
+                  <KIE_CONNECTION_DATABASE>kie</KIE_CONNECTION_DATABASE>
+                </env>
+                <ports>
+                  <port>dashbuilder.t7.http.port:8080</port>
+                </ports>
+                <wait>
+                  <log>Deployment of web application directory \/usr\/local\/tomcat\/webapps\/dashbuilder has finished in
+                  </log>
+                  <time>${docker.run.timeout}</time>
+                </wait>
+                <log>
+                  <prefix>DEMO</prefix>
+                  <date>ISO8601</date>
+                  <color>blue</color>
+                </log>
+              </run>
+            </image>
+
+          </images>
+        </configuration>
+
+        <executions>
+
+          <execution>
+            <id>dashbuilder-build</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>build</goal>
+            </goals>
+          </execution>
+
+          <execution>
+            <id>dashbuilder-start</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>start</goal>
+            </goals>
+          </execution>
+
+        </executions>
+
+      </plugin>
+
+    </plugins>
+  </build>
 </project>
