--- a/pom.xml
+++ b/pom.xml
@@ -111,18 +111,6 @@
         <type>jar</type>
       </dependency>
 
-      <dependency>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-site-plugin</artifactId>
-        <version>3.4</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.8</version>
-      </dependency>
-      
     </dependencies>
     
   </dependencyManagement>
@@ -130,6 +118,24 @@
   <build>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.4</version>
+          <configuration>
+            <jarOutputDirectory>${project.build.directory}</jarOutputDirectory>
+            <reportPlugins>
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.8</version>
+                <reports>
+                  <report>dependencies</report>
+                </reports>
+              </plugin>
+            </reportPlugins>
+          </configuration>
+        </plugin>
         <plugin>
           <groupId>org.jolokia</groupId>
           <artifactId>docker-maven-plugin</artifactId>
