--- a/kie-server/pom.xml
+++ b/kie-server/pom.xml
@@ -18,7 +18,6 @@
     <dependency>
       <groupId>org.kie.server</groupId>
       <artifactId>kie-server</artifactId>
-      <version>${docker.kie.artifacts.version}</version>
       <classifier>ee6</classifier>
       <type>war</type>
     </dependency>
@@ -26,7 +25,6 @@
     <dependency>
       <groupId>org.kie.server</groupId>
       <artifactId>kie-server</artifactId>
-      <version>${docker.kie.artifacts.version}</version>
       <classifier>ee7</classifier>
       <type>war</type>
     </dependency>
@@ -34,7 +32,6 @@
     <dependency>
       <groupId>org.kie.server</groupId>
       <artifactId>kie-server</artifactId>
-      <version>${docker.kie.artifacts.version}</version>
       <classifier>webc</classifier>
       <type>war</type>
     </dependency>
@@ -45,7 +42,6 @@
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-tomcat-integration</artifactId>
-      <version>${docker.kie.artifacts.version}</version>
     </dependency>
 
     <!--
@@ -67,8 +63,8 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.transaction</groupId>
-      <artifactId>jta</artifactId>
+      <groupId>org.jboss.spec.javax.transaction</groupId>
+      <artifactId>jboss-transaction-api_1.1_spec</artifactId>
     </dependency>
 
     <dependency>
@@ -77,14 +73,8 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.security.jacc</groupId>
-      <artifactId>javax.security.jacc-api</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-project-info-reports-plugin</artifactId>
-      <version>2.8</version>
+      <groupId>org.jboss.spec.javax.security.jacc</groupId>
+      <artifactId>jboss-jacc-api_1.4_spec</artifactId>
     </dependency>
 
   </dependencies>
