--- a/kie-wb/pom.xml
+++ b/kie-wb/pom.xml
@@ -18,7 +18,6 @@
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-wb-distribution-wars</artifactId>
-      <version>${docker.kie.artifacts.version}</version>
       <type>war</type>
       <classifier>wildfly8</classifier>
     </dependency>
@@ -26,7 +25,6 @@
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-wb-distribution-wars</artifactId>
-      <version>${docker.kie.artifacts.version}</version>
       <type>war</type>
       <classifier>eap6_4</classifier>
     </dependency>
@@ -35,7 +33,6 @@
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-wb-distribution-wars</artifactId>
-      <version>${docker.kie.artifacts.version}</version>
       <type>war</type>
       <classifier>tomcat7</classifier>
     </dependency>
@@ -43,7 +40,6 @@
     <dependency>
       <groupId>org.jbpm.dashboard</groupId>
       <artifactId>jbpm-dashboard-distributions</artifactId>
-      <version>${docker.kie.artifacts.version}</version>
       <type>war</type>
       <classifier>wildfly8</classifier>
     </dependency>
@@ -51,7 +47,6 @@
     <dependency>
       <groupId>org.jbpm.dashboard</groupId>
       <artifactId>jbpm-dashboard-distributions</artifactId>
-      <version>${docker.kie.artifacts.version}</version>
       <type>war</type>
       <classifier>eap6_4</classifier>
     </dependency>
@@ -59,7 +54,6 @@
     <dependency>
       <groupId>org.jbpm.dashboard</groupId>
       <artifactId>jbpm-dashboard-distributions</artifactId>
-      <version>${docker.kie.artifacts.version}</version>
       <type>war</type>
       <classifier>tomcat7</classifier>
     </dependency>
@@ -70,7 +64,6 @@
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-tomcat-integration</artifactId>
-      <version>${docker.kie.artifacts.version}</version>
       <type>jar</type>
     </dependency>
 
@@ -93,8 +86,8 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.transaction</groupId>
-      <artifactId>jta</artifactId>
+      <groupId>org.jboss.spec.javax.transaction</groupId>
+      <artifactId>jboss-transaction-api_1.1_spec</artifactId>
     </dependency>
 
     <dependency>
@@ -103,8 +96,8 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.security.jacc</groupId>
-      <artifactId>javax.security.jacc-api</artifactId>
+      <groupId>org.jboss.spec.javax.security.jacc</groupId>
+      <artifactId>jboss-jacc-api_1.4_spec</artifactId>
     </dependency>
 
     <dependency>
@@ -120,7 +113,6 @@
     <dependency>
       <groupId>org.kie.docker</groupId>
       <artifactId>kie-jboss-modules</artifactId>
-      <version>${project.version}</version>
       <classifier>wildfly-mysql</classifier>
       <type>tar.gz</type>
     </dependency>
@@ -128,7 +120,6 @@
     <dependency>
       <groupId>org.kie.docker</groupId>
       <artifactId>kie-jboss-modules</artifactId>
-      <version>${project.version}</version>
       <classifier>wildfly-postgres</classifier>
       <type>tar.gz</type>
     </dependency>
@@ -136,7 +127,6 @@
     <dependency>
       <groupId>org.kie.docker</groupId>
       <artifactId>kie-jboss-modules</artifactId>
-      <version>${project.version}</version>
       <classifier>eap-mysql</classifier>
       <type>tar.gz</type>
     </dependency>
@@ -144,15 +134,8 @@
     <dependency>
       <groupId>org.kie.docker</groupId>
       <artifactId>kie-jboss-modules</artifactId>
-      <version>${project.version}</version>
       <classifier>eap-postgres</classifier>
       <type>tar.gz</type>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-project-info-reports-plugin</artifactId>
-      <version>2.8</version>
     </dependency>
 
   </dependencies>
@@ -278,8 +261,7 @@
                   <port>kiewb.t7.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployment of web application directory \/usr\/local\/tomcat\/webapps\/kie-wb has finished in
-                  </log>
+                  <log>Deployment of web application directory \/usr\/local\/tomcat\/webapps\/kie-wb has finished in</log>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
