--- a/pom.xml
+++ b/pom.xml
@@ -49,52 +49,58 @@
 
   <dependencyManagement>
     <dependencies>
-      <!--
-          Dependencies for deploying into Tomcat7 shared library. 
-      -->
+      <!-- Defines versions for 3rd party artifacts. Using the kie-platform-bom to make sure the versions are always
+           properly aligned to the ones used in the KIE Platform. -->
       <dependency>
-        <groupId>org.codehaus.btm</groupId>
-        <artifactId>btm</artifactId>
-        <version>2.1.4</version>
+        <groupId>org.kie</groupId>
+        <artifactId>kie-platform-bom</artifactId>
+        <version>${docker.kie.artifacts.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>org.jbpm.dashboard</groupId>
+        <artifactId>jbpm-dashboard-distributions</artifactId>
+        <version>${docker.kie.artifacts.version}</version>
+        <type>war</type>
+        <classifier>eap6_4</classifier>
+      </dependency>
+      <dependency>
+        <groupId>org.jbpm.dashboard</groupId>
+        <artifactId>jbpm-dashboard-distributions</artifactId>
+        <version>${docker.kie.artifacts.version}</version>
+        <type>war</type>
+        <classifier>wildfly8</classifier>
+      </dependency>
+      <dependency>
+        <groupId>org.jbpm.dashboard</groupId>
+        <artifactId>jbpm-dashboard-distributions</artifactId>
+        <version>${docker.kie.artifacts.version}</version>
+        <type>war</type>
+        <classifier>tomcat7</classifier>
       </dependency>
 
       <dependency>
-        <groupId>org.codehaus.btm</groupId>
-        <artifactId>btm-tomcat55-lifecycle</artifactId>
-        <version>2.1.4</version>
+        <groupId>org.dashbuilder</groupId>
+        <artifactId>dashbuilder-distros</artifactId>
+        <version>${docker.dashbuilder.artifacts.version}</version>
+        <type>war</type>
+        <classifier>wildfly8</classifier>
       </dependency>
-
       <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <version>1.3.161</version>
+        <groupId>org.dashbuilder</groupId>
+        <artifactId>dashbuilder-distros</artifactId>
+        <version>${docker.dashbuilder.artifacts.version}</version>
+        <type>war</type>
+        <classifier>eap6_4</classifier>
       </dependency>
-
       <dependency>
-        <groupId>javax.transaction</groupId>
-        <artifactId>jta</artifactId>
-        <version>1.1</version>
+        <groupId>org.dashbuilder</groupId>
+        <artifactId>dashbuilder-distros</artifactId>
+        <version>${docker.dashbuilder.artifacts.version}</version>
+        <type>war</type>
+        <classifier>tomcat7</classifier>
       </dependency>
-
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.7.12</version>
-      </dependency>
-
-      <dependency>
-        <groupId>javax.security.jacc</groupId>
-        <artifactId>javax.security.jacc-api</artifactId>
-        <version>1.5</version>
-      </dependency>
-
-      <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>5.1.35</version>
-        <type>jar</type>
-      </dependency>
-
       <dependency>
         <groupId>postgresql</groupId>
         <artifactId>postgresql</artifactId>
@@ -102,8 +108,35 @@
         <type>jar</type>
       </dependency>
 
+      <dependency>
+        <groupId>org.kie.docker</groupId>
+        <artifactId>kie-jboss-modules</artifactId>
+        <classifier>wildfly-mysql</classifier>
+        <version>${project.version}</version>
+        <type>tar.gz</type>
+      </dependency>
+      <dependency>
+        <groupId>org.kie.docker</groupId>
+        <artifactId>kie-jboss-modules</artifactId>
+        <version>${project.version}</version>
+        <classifier>wildfly-postgres</classifier>
+        <type>tar.gz</type>
+      </dependency>
+      <dependency>
+        <groupId>org.kie.docker</groupId>
+        <artifactId>kie-jboss-modules</artifactId>
+        <version>${project.version}</version>
+        <classifier>eap-mysql</classifier>
+        <type>tar.gz</type>
+      </dependency>
+      <dependency>
+        <groupId>org.kie.docker</groupId>
+        <artifactId>kie-jboss-modules</artifactId>
+        <version>${project.version}</version>
+        <classifier>eap-postgres</classifier>
+        <type>tar.gz</type>
+      </dependency>
     </dependencies>
-
   </dependencyManagement>
 
   <build>
