--- a/uf-dashbuilder/pom.xml
+++ b/uf-dashbuilder/pom.xml
@@ -18,7 +18,6 @@
     <dependency>
       <groupId>org.dashbuilder</groupId>
       <artifactId>dashbuilder-distros</artifactId>
-      <version>${docker.dashbuilder.artifacts.version}</version>
       <type>war</type>
       <classifier>wildfly8</classifier>
     </dependency>
@@ -26,7 +25,6 @@
     <dependency>
       <groupId>org.dashbuilder</groupId>
       <artifactId>dashbuilder-distros</artifactId>
-      <version>${docker.dashbuilder.artifacts.version}</version>
       <type>war</type>
       <classifier>eap6_4</classifier>
     </dependency>
@@ -34,7 +32,6 @@
     <dependency>
       <groupId>org.dashbuilder</groupId>
       <artifactId>dashbuilder-distros</artifactId>
-      <version>${docker.dashbuilder.artifacts.version}</version>
       <type>war</type>
       <classifier>tomcat7</classifier>
     </dependency>
@@ -58,8 +55,8 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.transaction</groupId>
-      <artifactId>jta</artifactId>
+      <groupId>org.jboss.spec.javax.transaction</groupId>
+      <artifactId>jboss-transaction-api_1.1_spec</artifactId>
     </dependency>
 
     <dependency>
@@ -68,8 +65,8 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.security.jacc</groupId>
-      <artifactId>javax.security.jacc-api</artifactId>
+      <groupId>org.jboss.spec.javax.security.jacc</groupId>
+      <artifactId>jboss-jacc-api_1.4_spec</artifactId>
     </dependency>
 
     <dependency>
@@ -240,8 +237,7 @@
                   <port>dashbuilder.t7.http.port:8080</port>
                 </ports>
                 <wait>
-                  <log>Deployment of web application directory \/usr\/local\/tomcat\/webapps\/dashbuilder has finished in
-                  </log>
+                  <log>Deployment of web application directory \/usr\/local\/tomcat\/webapps\/dashbuilder has finished in</log>
                   <time>${docker.run.timeout}</time>
                 </wait>
                 <log>
