--- a/kie-server/pom.xml
+++ b/kie-server/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.kie.docker</groupId>
     <artifactId>kie-docker-ci-images</artifactId>
-    <version>6.4.0-SNAPSHOT</version>
+    <version>6.2.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>kie-server</artifactId>
@@ -16,21 +16,21 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.kie.server</groupId>
+      <groupId>org.kie</groupId>
       <artifactId>kie-server</artifactId>
       <classifier>ee6</classifier>
       <type>war</type>
     </dependency>
 
     <dependency>
-      <groupId>org.kie.server</groupId>
+      <groupId>org.kie</groupId>
       <artifactId>kie-server</artifactId>
       <classifier>ee7</classifier>
       <type>war</type>
     </dependency>
 
     <dependency>
-      <groupId>org.kie.server</groupId>
+      <groupId>org.kie</groupId>
       <artifactId>kie-server</artifactId>
       <classifier>webc</classifier>
       <type>war</type>
