--- a/kie-server/src/main/docker/tomcat/Dockerfile
+++ b/kie-server/src/main/docker/tomcat/Dockerfile
@@ -6,7 +6,7 @@ MAINTAINER "Roger Martinez" "romartin@redhat.com"
 
 ####### ENVIRONMENT ############
 ENV JAVA_OPTS -XX:MaxPermSize=256m -Xms256m -Xmx512m
-ENV CATALINA_OPTS -Xmx512M -XX:MaxPermSize=512m -Dbtm.root=$CATALINA_HOME -Dbitronix.tm.configuration=$CATALINA_HOME/conf/btm-config.properties
+ENV CATALINA_OPTS -Xmx512M -XX:MaxPermSize=512m -Dbtm.root=$CATALINA_HOME -Dbitronix.tm.configuration=$CATALINA_HOME/conf/btm-config.properties -Djava.security.egd=file:/dev/./urandom
 LABEL org.kie.kie-server.artifact=org.kie:kie-server:war:webc
 
 ####### KIE-SERVER & SITE WAR ############
